Fixed misalignment

--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -10,7 +10,7 @@
 .info__card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: .5rem;
-    padding: 1.5rem;
+    padding: 1rem;
     background-color: #dddddd;
     margin-bottom: 1rem;
 }
@@ -20,13 +20,13 @@
 }
 
 .info__card > img {
-    height: 170px;
-    width: 170px;
-    margin-bottom: 1rem;
+    height: 150px;
+    width: 150px;
+    margin-bottom: .5rem;
 }
 
 .info__card > p {
-    max-width: 700px;
+    max-width: 800px;
     line-height: 1.4;
     letter-spacing: 2.5px;
     margin-bottom: .5rem;
@@ -38,7 +38,7 @@
 .info__arrows {
     display: flex;
     justify-content: center;
-    margin-top: 1.5rem;
+    margin-top: .5rem;
 }
 
 .MuiSvgIcon-root {
@@ -46,18 +46,10 @@
     font-weight: bold !important;
 }
 
-.info__caution {
-    position: absolute;
-    bottom: 0;
-    margin: 1rem 0;
-}
-
 audio {
     outline-width: 0;
-}
-
-.info__frame {
-    display: none;
+    margin-top: .3rem;
+    height: 2rem;
 }
 
 .info__caution > p {
@@ -71,12 +63,14 @@ audio {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2rem;
+    margin: 2rem 0 1rem 0;
     font-size: 14px;
+    
 }
 
-.copy > p {
-    margin-top: 2rem;
+.info__caution {
+    position: absolute;
+    bottom: 0;
 }
 
 .copy > .MuiSvgIcon-root {
